Принятие через карточку запросу
