# KnewAlreadyWebApp/OpenAPIs/swagger.json
@@ -89,6 +89,46 @@
         }
       }
     },
+    "/api/suggest-actions/accept": {
+      "post": {
+        "tags": [
+          "SuggestAction"
+        ],
+        "operationId": "AcceptAction",
+        "parameters": [
+          {
+            "name": "itemId",
+            "in": "query",
+            "schema": {
+              "type": "string",
+              "format": "uuid"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "text/plain": {
+                "schema": {
+                  "type": "boolean"
+                }
+              },
+              "application/json": {
+                "schema": {
+                  "type": "boolean"
+                }
+              },
+              "text/json": {
+                "schema": {
+                  "type": "boolean"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/user/list": {
       "get": {
         "tags": [
